log
Sun 04 May 2025 02:37:01 AM UTC: 
 treemap.c | 162 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 154 insertions(+), 8 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:233:1: error: control reaches end of non-void function [-Werror=return-type]
  233 | }
      | ^
cc1: all warnings being treated as errors
5729e4d
Sun 04 May 2025 02:38:32 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9fa6c5d
Sun 04 May 2025 02:46:40 AM UTC: 
 treemap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  0|0
aac4a67
Sun 04 May 2025 02:52:31 AM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  26|1
total_score: 60/70
378dafe
Sun 04 May 2025 03:00:47 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
3ee063d
